# relatorioMLP

./: .gitignore  README.md  main  relatorio.aux  relatorio.bbl  relatorio.bcf  relatorio.blg  relatorio.fdb_latexmk  relatorio.fls  relatorio.out  relatorio.run.xml  relatorio.tex  relatorio.toc
mlpQuizApp/: CMakeLists.txt  Database.cpp  Database.h  Jogador.cpp  Object.cpp  Object.h  Pergunta.cpp  Person.cpp  Person.h  Player.cpp  Player.h  Question.cpp  Question.h  SignUpManager.cpp  SignUpManager.h  Templates.cpp  main.cpp  mlpQuizApp  mlpQuizApp.cbp
